deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netstatd-headless
  namespace: kube-system
  labels:
    app: netstatd
spec:
  clusterIP: None
  selector:
    app: netstatd
  ports:
    - name: http
      port: 5281
      targetPort: 5281
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: netstatd
  namespace: kube-system
  labels:
    app: netstatd
spec:
  type: ClusterIP
  selector:
    app: netstatd
  ports:
    - name: http-single
      port: 5281
      targetPort: 5281
      protocol: TCP
    - name: http-mux
      port: 6281
      targetPort: 6281
      protocol: TCP
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netstatd
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: netstatd
  template:
    metadata:
      labels:
        app: netstatd
    spec:
      hostNetwork: true
      hostPID: true
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
        - name: zot
      containers:
        - name: netstatd
          image: git.codemowers.io/laurivosandi/netstatd
          args:
            - "--log-level=warn"
            - "--http-port=5281"
            - "--http-mux-port=6281"
            - "--enable-image-metainfo"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 5281
              protocol: TCP
              name: http
              hostPort: 5281
            - containerPort: 6281
              protocol: TCP
              name: http-mux
              hostPort: 6281
          securityContext:
            privileged: true
          volumeMounts:
            - name: containerd-sock
              mountPath: /run/containerd/containerd.sock
            - name: sys-kernel-tracing
              mountPath: /sys/kernel/tracing
            - name: sys-kernel-debug
              mountPath: /sys/kernel/debug
      volumes:
        - name: containerd-sock
          hostPath:
            path: /run/k3s/containerd/containerd.sock
            type: Socket
        - name: sys-kernel-tracing
          hostPath:
            path: /sys/kernel/tracing
            type: Directory
        - name: sys-kernel-debug
          hostPath:
            path: /sys/kernel/debug
            type: Directory
      tolerations:
        - effect: NoSchedule
          operator: Exists
      serviceAccountName: netstatd
      nodeSelector:
        kubernetes.io/arch: amd64
